Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14093

gcc10 fails to build Lustre

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • Lustre 2.14.0
    • None
    • 3
    • 9223372036854775807

      /ldiskfs_extents.h:214:12: error: ‘zero_ex2.ee_start_hi’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
        214 |  block |= ((ldiskfs_fsblk_t) le16_to_cpu(ex->ee_start_hi) << 31) << 1;
      /home/alexey/head2/ldiskfs/extents.c:3411:34: note: ‘zero_ex2.ee_start_hi’ was declared here
       3411 |  struct ldiskfs_extent zero_ex1, zero_ex2;
            |                                  ^~~~~~~~
      ...
      /home/alexey/head2/lustre/obdclass/llog_swab.c: In function ‘lustre_swab_update_ops’:
      /home/alexey/head2/lustre/obdclass/llog_swab.c:137:46: error: array subscript 65534 is outside the bounds of an interior zero-length array ‘__u16[0]’ {aka ‘short unsigned int[]’} [-Werror=zero-length-bounds]
        137 |    __swab16s(&uops->uops_op[i].uop_params_off[j]);
            |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
      ...
      /home/alexey/head2/lustre/mgc/mgc_request.c: In function ‘mgc_apply_recover_logs’:
      /home/alexey/head2/lustre/mgc/mgc_request.c:1506:24: error: ‘sprintf’ argument 4 may overlap destination object ‘<unknown>’ [-Werror=restrict]
       1506 |                 pos += sprintf(obdname + pos, "-%s-%s", cname, inst);
            |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      ...
      In function ‘lfs_project_item_alloc’,
          inlined from ‘lfs_project_handle_dir’ at lfs_project.c:288:9:
      lfs_project.c:72:2: error: ‘strncpy’ output may be truncated copying 4095 bytes from a string of length 4095 [-Werror=stringop-truncation]
         72 |  strncpy(lpi->lpi_pathname, pathname, sizeof(lpi->lpi_pathname) - 1);
            |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: