lustre/utils/mount_utils.h
@@ -250,8 +250,8 @@ struct module_backfs_ops {
 	void   *dl_handle;
 };
 
-struct module_backfs_ops zfs_ops;
-struct module_backfs_ops ldiskfs_ops;
+extern struct module_backfs_ops zfs_ops;
+extern struct module_backfs_ops ldiskfs_ops;
 
 struct module_backfs_ops *load_backfs_module(enum ldd_mount_type mount_type);
 void unload_backfs_ops(struct module_backfs_ops *ops);
